--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* --- Global Styles --- */
+/*Global Styles*/
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@ body {
 .clear {
     clear: both;
 }
-/* --- Header --- */
+/*Header*/
 header {
     background: #2c3e50;
     color: white;
@@ -70,7 +70,7 @@ nav a:hover {
     padding: 2px 7px;
     border-radius: 50%;
 }
-/* --- Main Content --- */
+/*Main Content*/
 main {
     flex: 1 0 auto;
 }
@@ -136,7 +136,7 @@ main {
     padding: 15px;
     z-index: 10;
 }
-/* --- Dropzone --- */
+/*Dropzone*/
 #dropzone {
     clear: both;
     width: 100%;
@@ -157,7 +157,7 @@ main {
     border-radius: 5px;
     font-weight: bold;
 }
-/* --- Buttons --- */
+/*Buttons*/
 .btn {
     background: #3498db;
     color: white;
@@ -186,7 +186,7 @@ main {
     border-radius: 5px;
     cursor: pointer;
 }
-/* --- Tables --- */
+/*Tables*/
 .details-table {
     width: 100%;
     border-collapse: collapse;
@@ -200,7 +200,7 @@ main {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     text-align: left;
 }
-/* --- Footer --- */
+/*Footer*/
 footer {
     background: #2c3e50;
     color: white;
@@ -238,3 +238,35 @@ footer {
     font-size: 13px;
     color: #7f8c8d;
 }
+/*Responsev*/
+@media (max-width: 768px) {
+    .container {
+        width: 60%;
+    }
+    .logo {
+        float: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+  nav {
+        float: none;
+        text-align: center;
+        margin-top: 10px;
+    }
+ nav a {
+        display: block;
+        margin: 10px ;
+    }
+    .trip-item {
+        float: none;
+        width: 100%;
+        margin: 10px ;
+        height: auto;
+    }
+    .footer-box {
+        float: none;
+        width: 100%;
+        margin: 10px ;
+        text-align: center;
+    }}
